fix(content): modify line spacing for visual clarity

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,4 +15,5 @@ ul {
 li {
     text-decoration: none;
     line-height: 30px;
+    line-height: 1.2rem;
 }
